[package]
name = "codexec"
version = "0.1.0"
authors = ["siidheesh <siidheesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-web-actors = "3"
tokio = { version = "1.2", features = ["full"] }
rand="0.8"